infra/k8s/client-depl.yaml
#deployement is inside the bucket of the objects called v1
apiVersion: apps/v1
kind: Deployment
metadata:
  #name of the deployement
  name: client-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      # label can be anything instead of app
      app: client

  #very similar to pod config file
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: chipmunkey/client
---
#cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    # matchlabels from the deployment
    app: client
  ports:
    - name: client
      protocol: TCP
      #port at which eventbus is receiving traffic
      port: 3000
      targetPort: 3000
