infra/k8s/event-bus-depl.yaml
#deployement is inside the bucket of the objects called v1
apiVersion: apps/v1
kind: Deployment
metadata:
  #name of the deployement
  name: event-bus-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      # label can be anything instead of app
      app: event-bus

  #very similar to pod config file
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: chipmunkey/event-bus
---
#cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    # matchlabels from the deployment
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      #port at which eventbus is receiving traffic
      port: 4005
      targetPort: 4005
