infra/k8s/moderation-depl.yaml
#deployement is inside the bucket of the objects called v1
apiVersion: apps/v1
kind: Deployment
metadata:
  #name of the deployement
  name: moderation-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      # label can be anything instead of app
      app: moderation

  #very similar to pod config file
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: chipmunkey/moderation
---
#cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    # matchlabels from the deployment
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      #port at which eventbus is receiving traffic
      port: 4003
      targetPort: 4003
